[project]
name = "zyagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "config", 
    "system1",
    "system2",
    "Memory",
    "Pipeline",
    "Agent",
    "MCTS",
    "LLM",
]

